--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -21,6 +21,7 @@
     </div>
     <div class="button-container">
         <button class="start-button" id="start">Start</button>
+        <button class="restart-button" id="restart">Restart</button>
     </div>
 </div>
 
